--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,15 @@
-.idea
-.cproject
-.project
-.lock-wscript
-build*
-.DS_Store
-Debug
-node_modules
-package-lock.json
-binary
 *.log
-examples
+.cproject
+.eslintrc
 .gitignore
-test
+.idea
+.lock-wscript
+.project
+binary/
+build*/
+CPPLINT.cfg
+Debug/
+examples/
+package-lock.json
+test/
+qt/
