--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
-  "name": "image-raub",
-  "version": "0.0.4",
-  "description": "Native Image loader for Node.js",
-  "author": "Luis Blanco <raubtierxxx@gmail.com>",
-  "main": "index.js",
-  "keywords": [
-    "image",
-    "node",
-    "freeimage",
-    "graphics"
-  ],
-  "maintainers": [
-    {
-      "name": "Luis Blanco",
-      "email": "raubtierxxx@gmail.com",
-      "skype": "rauber666"
-    }
-  ],
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/raub/node-image.git"
-  },
-  "dependencies": {
-    "addon-tools-raub": "0.0.8",
-    "deps-freeimage-raub": "0.0.4"
-  }
+	"author": "Luis Blanco <luisblanco1337@gmail.com>",
+	"name": "image-raub",
+	"version": "0.0.5",
+	"description": "Native Image loader for Node.js",
+	"license": "MIT",
+	"main": "index.js",
+	"keywords": [
+		"addon",
+		"image",
+		"decoder",
+		"freeimage",
+		"graphics"
+	],
+	"engines": {
+		"node": ">=8.11.1",
+		"npm": ">=5.6.0"
+	},
+	"maintainers": [
+		{
+			"name": "Luis Blanco",
+			"email": "luisblanco1337@gmail.com",
+			"skype": "rauber666"
+		}
+	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/node-3d/image-raub.git"
+	},
+	"dependencies": {
+		"addon-tools-raub": "0.1.7",
+		"deps-freeimage-raub": "0.0.5"
+	}
 }
