:green_heart: Adjust CI #1

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,9 @@ before_install:
 
 install:
   - npm i --clang=1
+  - cd node_modules/deps-freeimage-raub/bin-linux64
+  - ls
+  - cd ../../..
   - cd test && npm i --clang=1
   - cd ..
 
