--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	],
 	"engines": {
 		"node": ">=8.11.4",
-		"npm": ">=5.6.0"
+		"npm": ">=6.3.0"
 	},
 	"maintainers": [
 		{
@@ -28,7 +28,7 @@
 		"url": "https://github.com/node-3d/image-raub.git"
 	},
 	"dependencies": {
-		"addon-tools-raub": "~3.0.0",
+		"addon-tools-raub": "4.0.0",
 		"deps-freeimage-raub": "https://github.com/node-3d/deps-freeimage-raub.git"
 	}
 }
