--- a/.travis.yml
+++ b/.travis.yml
@@ -1,36 +1,25 @@
-sudo: true
 dist: trusty
+sudo: false
 
 language: node_js
 
 node_js:
-  - "8.11.4"
-
-
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-      - llvm-toolchain-precise-3.5
-    packages:
-      - clang-3.5
+  - "10.13.0"
 
 
 before_install:
-  - if [[ $(uname -s) == 'Linux' ]]; then
-      export CXX="clang++-3.5";
-      export CC="clang-3.5";
-    fi;
   - npm conf set strict-ssl false
-  - npm install -g npm@6.4.0
+  - npm install -g npm@6.4.1
 
 
 install:
-  - npm i --clang=1
-  - cd test && npm i --clang=1
+  - cd test
+  - npm i
   - cd ..
 
 
 script:
-  - cd test && npm test
+  - cd test
+  - npm test
   - cd ..
+  
