--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,12 @@ node_js:
   - "10.13.0"
 
 
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+
+
 before_install:
   - npm conf set strict-ssl false
   - npm install -g npm@6.4.1
