--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,9 @@ before_install:
   - npm conf set strict-ssl false
   - npm install -g npm@6.4.1
   - echo $PATH
+  - echo $LD_LIBRARY_PATH
+  - export PATH=./node_modules/deps-freeimage-raub/bin-linux64:$PATH
+  - export LD_LIBRARY_PATH=./node_modules/deps-freeimage-raub/bin-linux64:$LD_LIBRARY_PATH
 
 
 install:
