--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: trusty
+dist: xenial
 sudo: false
 
 language: node_js
@@ -12,13 +12,10 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
     packages:
-      - g++-6
-      - libfreeimage-dev
+      - libfreeimage3
 
 
 before_install:
-  - export CXX="gcc-6"
-  - export CC="g++-6"
   - npm conf set strict-ssl false
   - npm install -g npm@6.4.1
 
