--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"url": "https://github.com/node-3d/image-raub.git"
 	},
 	"dependencies": {
-		"addon-tools-raub": "4.0.0",
+		"addon-tools-raub": "https://github.com/node-3d/addon-tools-raub.git",
 		"deps-freeimage-raub": "https://github.com/node-3d/deps-freeimage-raub.git"
 	}
 }
