--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ node_js:
 
 matrix:
   include:
-  # - name: "Linux"
-  #   os: linux
-  #   dist: xenial
-  #   sudo: false
+  - name: "Linux"
+    os: linux
+    dist: xenial
+    sudo: false
   - name: "MacOS"
     os: osx
 
