--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -10,4 +10,5 @@ filter=-whitespace/comments
 filter=-whitespace/tab
 filter=-whitespace/end_of_line
 filter=-whitespace/indent
+filter=-whitespace/operators
 filter=-readability/todo
