--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 
 node_js:
-  - "10.13.0"
+  - "10.16.1"
 
 
 matrix:
@@ -19,3 +19,58 @@ matrix:
 install:
   - cd test
   - npm i
+
+
+matrix:
+  include:
+  - name: "Linux Test"
+    language: node_js
+    node_js: "10.16.1"
+    os: linux
+    dist: xenial
+    sudo: false
+    install:
+    - cd test
+    - npm i
+  - name: "OSX Test"
+    os: osx
+    language: node_js
+    node_js: "10.16.1"
+    install:
+    - cd test
+    - npm i
+  - name: "Linux Build"
+    os: osx
+    if: commit_message =~ /^:hammer:/
+    language: cpp
+    compiler: clang++
+    env:
+    - ISBUILD=true
+    - MODULE=true
+    script:
+      - chmod +x src/osx.sh && src/osx.sh
+  - name: "OSX Build"
+    os: osx
+    if: commit_message =~ /^:hammer:/
+    language: cpp
+    compiler: clang++
+    env:
+    - ISBUILD=true
+    - MODULE=true
+    script:
+      - chmod +x src/osx.sh && src/osx.sh
+
+
+deploy:
+  on:
+    all_branches: true
+    condition: $ISBUILD = true
+  provider: releases
+  name: "Binary for OSX"
+  body: $TRAVIS_COMMIT_MESSAGE
+  api_key: $GITHUB_TOKEN
+  skip_cleanup: true
+  overwrite: true
+  draft: true
+  file:
+    - "src/freeimage.dylib"
