--- a/src/package.json
+++ b/src/package.json
@@ -3,8 +3,7 @@
 	"version": "0.0.0",
 	"private": true,
 	"dependencies": {
-		"addon-tools-raub": "4.2.0",
-		"node-addon-api": "1.7.1",
-		"deps-freeimage-raub": "1.1.1"
+		"addon-tools-raub": "https://github.com/node-3d/addon-tools-raub",
+		"deps-freeimage-raub": "https://github.com/node-3d/deps-freeimage-raub"
 	}
 }
