--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"author": "Luis Blanco <luisblanco1337@gmail.com>",
 	"name": "image-raub",
-	"version": "2.1.0",
+	"version": "3.0.0",
 	"description": "Native Image loader for Node.js",
 	"license": "MIT",
 	"main": "index.js",
@@ -13,23 +13,21 @@
 		"graphics"
 	],
 	"engines": {
-		"node": ">=10.13.0",
+		"node": ">=10.16.1",
 		"npm": ">=6.4.1"
 	},
-	"maintainers": [
-		{
-			"name": "Luis Blanco",
-			"email": "luisblanco1337@gmail.com",
-			"skype": "rauber666"
-		}
-	],
+	"config": {
+		"install": "v2.0.0"
+	},
+	"scripts": {
+		"postinstall": "node install"
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/node-3d/image-raub.git"
 	},
 	"dependencies": {
-		"addon-tools-raub": "4.2.0",
-		"node-addon-api": "1.7.1",
-		"deps-freeimage-raub": "1.1.1"
+		"addon-tools-raub": "https://github.com/node-3d/addon-tools-raub",
+		"deps-freeimage-raub": "https://github.com/node-3d/deps-freeimage-raub"
 	}
 }
