--- a/package.json
+++ b/package.json
@@ -12,6 +12,15 @@
 		"freeimage",
 		"graphics"
 	],
+	"files": [
+		"js",
+		"core.js",
+		"index.js",
+		"install.js",
+		"LICENSE",
+		"package.json",
+		"README.md"
+	],
 	"engines": {
 		"node": ">=10.16.1",
 		"npm": ">=6.9.0"
