--- a/src/package.json
+++ b/src/package.json
@@ -2,6 +2,10 @@
 	"name": "build",
 	"version": "0.0.0",
 	"private": true,
+	"scripts": {
+		"build": "node-gyp rebuild && node cpbin",
+		"build:dev": "node-gyp rebuild --debug && node cpbin"
+	},
 	"dependencies": {
 		"addon-tools-raub": "https://github.com/node-3d/addon-tools-raub",
 		"deps-freeimage-raub": "https://github.com/node-3d/deps-freeimage-raub"
