--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	},
 	"dependencies": {
 		"addon-tools-raub": "https://github.com/node-3d/addon-tools-raub",
-		"deps-freeimage-raub": "https://github.com/node-3d/deps-freeimage-raub"
+		"deps-freeimage-raub": "https://github.com/node-3d/deps-freeimage-raub",
+		"segfault-raub": "https://github.com/node-3d/segfault-raub.git"
 	}
 }
