--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
 		"url": "https://github.com/node-3d/image-raub.git"
 	},
 	"dependencies": {
-		"addon-tools-raub": "https://github.com/node-3d/addon-tools-raub",
-		"deps-freeimage-raub": "https://github.com/node-3d/deps-freeimage-raub",
-		"segfault-raub": "https://github.com/node-3d/segfault-raub.git"
+		"addon-tools-raub": "5.0.0",
+		"deps-freeimage-raub": "2.0.0",
+		"segfault-raub": "1.0.0"
 	}
 }
