--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"build": "node-gyp rebuild && node cpbin"
+		"build": "node-gyp rebuild && node -e \"require('addon-tools-raub/cpbin')('image')\""
 	},
 	"dependencies": {
 		"addon-tools-raub": "5.0.0",
