--- a/src/CPPLINT.cfg
+++ b/src/CPPLINT.cfg
@@ -11,4 +11,6 @@ filter=-whitespace/tab
 filter=-whitespace/end_of_line
 filter=-whitespace/indent
 filter=-whitespace/operators
+filter=-whitespace/parens
 filter=-readability/todo
+filter=-whitespace/braces
