--- a/.travis.yml
+++ b/.travis.yml
@@ -52,5 +52,7 @@ deploy:
   skip_cleanup: true
   overwrite: true
   draft: true
+  prerelease: false
+  tag_name: "$SYSNAME"
   file:
     - "build/Release/image.node"
