--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"author": "Luis Blanco <luisblanco1337@gmail.com>",
 	"name": "image-raub",
-	"version": "3.1.2",
+	"version": "3.1.3",
 	"description": "Native Image loader for Node.js",
 	"license": "MIT",
 	"main": "index.js",
@@ -36,8 +36,8 @@
 		"url": "https://github.com/node-3d/image-raub.git"
 	},
 	"dependencies": {
-		"addon-tools-raub": "5.1.0",
-		"deps-freeimage-raub": "2.0.1",
-		"segfault-raub": "1.1.1"
+		"addon-tools-raub": "5.1.x",
+		"deps-freeimage-raub": "2.0.x",
+		"segfault-raub": "1.1.x"
 	}
 }
