--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
 	},
 	"dependencies": {
 		"addon-tools-raub": "5.3.x",
-		"deps-freeimage-raub": "https://github.com/node-3d/deps-freeimage-raub.git",
+		"deps-freeimage-raub": "3.0.x",
 		"segfault-raub": "1.2.x"
 	},
 	"devDependencies": {
