--- a/.github/workflows/build-osx.yml
+++ b/.github/workflows/build-osx.yml
@@ -6,17 +6,20 @@ on:
 jobs:
   Build:
     if: contains('["raub"]', github.actor)
-    runs-on: macos-10.15
+    runs-on: macos-11
 
     steps:
 
       - name: Fetch Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - name: Install Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: 14.16.0
+          node-version: 16.17.0
+          cache: 'npm'
 
       - name: Install Modules
         run: npm ci
@@ -30,7 +33,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           draft: true
-          tag_name: linux-${{ github.run }}-${{ github.sha }}
+          tag_name: osx-${{ github.run }}-${{ github.sha }}
           name: OSX
           body: OSX binaries at ${{ github.sha }}
           files: src/build/Release/image.node
