--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -12,19 +12,22 @@ jobs:
   Validate:
     strategy:
         matrix:
-          os: [ubuntu-16.04, windows-latest, macos-10.15]
+          os: [ubuntu-20.04, windows-2022, macos-11]
 
     runs-on: ${{ matrix.os }}
 
     steps:
 
       - name: Fetch Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - name: Install Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: 14.16.0
+          node-version: 16.17.0
+          cache: 'npm'
 
       - name: Install Modules
         run: npm ci
