--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"author": "Luis Blanco <luisblanco1337@gmail.com>",
 	"name": "image-raub",
-	"version": "3.2.0",
+	"version": "3.3.0",
 	"description": "Native Image loader for Node.js",
 	"license": "MIT",
 	"main": "index.js",
@@ -23,8 +23,8 @@
 		"README.md"
 	],
 	"engines": {
-		"node": ">=14.16.0",
-		"npm": ">=6.14.1"
+		"node": ">=16.17.0",
+		"npm": ">=8.15.0"
 	},
 	"scripts": {
 		"postinstall": "node install",
@@ -54,15 +54,17 @@
 		"url": "https://github.com/node-3d/image-raub.git"
 	},
 	"dependencies": {
-		"addon-tools-raub": "5.3.x",
-		"deps-freeimage-raub": "3.0.x",
-		"segfault-raub": "1.2.x"
+		"addon-tools-raub": "^6.0.0",
+		"deps-freeimage-raub": "^3.1.0",
+		"segfault-raub": "^1.3.0",
+		"adm-zip": "^0.5.9"
 	},
 	"devDependencies": {
-		"eslint": "7.23.0",
-		"eslint-plugin-jest": "24.3.3",
-		"eslint-plugin-node": "11.1.0",
-		"jest": "26.6.3",
-		"typescript": "4.2.4"
+		"eslint-plugin-jest": "^27.0.4",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint": "^8.24.0",
+		"jest": "^29.0.3",
+		"node-addon-api": "^5.0.0",
+		"typescript": "^4.8.3"
 	}
 }
