--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -62,5 +62,11 @@ jobs:
       - name: Build Current Binary
         run: npm run build-all
 
-      - name: Run Unit Tests
+      - name: Run Unit Tests - Windows
+        if: matrix.os == 'windows-2022'
+        shell: cmd
+        run: npm run test-ci
+
+      - name: Run Unit Tests - Unix
+        if: matrix.os != 'windows-2022'
         run: npm run test-ci
