--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,7 @@ jobs:
         run: npm ci
 
       - name: Build Current Binary
-        run: npm run build-all
+        run: npm run build
 
       - name: Run Unit Tests - Unix
         if: matrix.os != 'windows-2022'
