--- a/src/CPPLINT.cfg
+++ b/src/CPPLINT.cfg
@@ -1,16 +1,18 @@
 set noparent
 linelength=110
-filter=-legal/copyright
-filter=-build/include_order
 filter=-build/header_guard
-filter=-build/namespaces
+filter=-build/include
+filter=-build/include_order
 filter=-build/include_what_you_use
+filter=-build/namespaces
+filter=-legal/copyright
+filter=-readability/todo
+filter=-runtime/indentation_namespace
 filter=-whitespace/blank_line
+filter=-whitespace/braces
 filter=-whitespace/comments
-filter=-whitespace/tab
 filter=-whitespace/end_of_line
 filter=-whitespace/indent
 filter=-whitespace/operators
 filter=-whitespace/parens
-filter=-readability/todo
-filter=-whitespace/braces
+filter=-whitespace/tab
