--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"author": "Luis Blanco <luisblanco1337@gmail.com>",
 	"name": "image-raub",
-	"version": "5.0.0",
+	"version": "5.0.1",
 	"description": "Native Image loader for Node.js",
 	"license": "MIT",
 	"main": "index.js",
@@ -19,8 +19,7 @@
 		"index.d.ts",
 		"install.js",
 		"LICENSE",
-		"package.json",
-		"README.md"
+		"package.json"
 	],
 	"engines": {
 		"node": ">=22.9.0",
