--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"author": "Luis Blanco <luisblanco1337@gmail.com>",
 	"name": "image-raub",
-	"version": "5.1.0",
+	"version": "5.2.0",
 	"description": "Native Image loader for Node.js",
 	"license": "MIT",
 	"main": "index.js",
@@ -22,14 +22,14 @@
 		"package.json"
 	],
 	"engines": {
-		"node": ">=22.9.0",
-		"npm": ">=10.8.3"
+		"node": ">=22.14.0",
+		"npm": ">=10.9.2"
 	},
 	"scripts": {
 		"postinstall": "node install",
 		"eslint": "eslint .",
-		"build": "cd src && node-gyp rebuild -j max --silent && node -e \"require('addon-tools-raub').cpbin('image')\" && cd ..",
-		"build-only": "cd src && node-gyp build -j max --silent && node -e \"require('addon-tools-raub').cpbin('image')\" && cd ..",
+		"build": "cd src && node-gyp rebuild -j max --silent && node -e \"require('addon-tools-raub').cpbin('image')\"",
+		"build-only": "cd src && node-gyp build -j max --silent && node -e \"require('addon-tools-raub').cpbin('image')\"",
 		"test": "node --test --watch",
 		"test-ci": "node --test"
 	},
@@ -38,15 +38,15 @@
 		"url": "https://github.com/node-3d/image-raub.git"
 	},
 	"dependencies": {
-		"addon-tools-raub": "^9.2.0",
-		"deps-freeimage-raub": "^6.1.0",
-		"segfault-raub": "^3.1.0"
+		"addon-tools-raub": "^9.3.0",
+		"deps-freeimage-raub": "^6.2.0",
+		"segfault-raub": "^3.2.0"
 	},
 	"devDependencies": {
-		"@types/node": "^22.10.5",
-		"@eslint/js": "^9.17.0",
-		"eslint": "^9.17.0",
+		"@types/node": "^22.13.4",
+		"@eslint/js": "^9.20.0",
+		"eslint": "^9.20.1",
 		"node-addon-api": "^8.3.0",
-		"typescript": "^5.7.2"
+		"typescript": "^5.7.3"
 	}
 }
